# DataBaseTermPaper

./: CMakeLists.txt  CMakePresets.json
source/app/: CMakeLists.txt  application.cpp  application.h  main.cpp
source/connection/: connection.h  local_connection.cpp  local_connection.h  remote_connection.cpp  remote_connection.h
source/data_base/: data_base.cpp  data_base.h
source/prepared_statement/: local_prepared_statement.cpp  local_prepared_statement.h  prepared_statement.h  remote_prepared_statement.cpp  remote_prepared_statement.h
source/result/: local_result.cpp  local_result.h  remote_result.cpp  remote_result.h  result.h  sqltypes.h
